samples/_failures_safe/1761487786_58e45a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58075dd1.c: In function ‘main’:
./samples/SAFE/__tmp_58075dd1.c:180:16: error: expected declaration or statement at end of input
  180 |                token.column);
      |                ^~~~~
./samples/SAFE/__tmp_58075dd1.c:180:16: error: expected declaration or statement at end of input
